mongo-express.yaml

#for MONGO_EXPRESS_DEPLOYMENT ----DOC1

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-express-deployment
  labels:
    app: mongodb-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-express
  template:
    metadata:
      labels:
        app: mongodb-express
    spec:
      containers:
        - name: mongodb-express
          image: mongo-express
          ports:
            - containerPort: 8081
--- #document separation

 #for the MONGO-EXPRESS_SERVICE-----DOC2

apiVersion: v1
kind: Service
metadata:
  name: mongodb-express-service
spec:
  selector:
    app: mongodb-express
  type: LoadBalancer # assigns service to external IP address & so accepts external req
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
    nodePort: 30000  #where the external IP address will be open (Range is 30k to 32k)
